# CHIP-8-Emulator

./: .gitignore  CMakeLists.txt  main.cpp
include/: chip8.hpp  emulator.hpp
src/: chip8.cpp  emulator.cpp  main.cpp
